Fixed bug #35176 (include()/require()/*_once() produce wrong error messages about main())